Update root level git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+*.ftpconfig
 stateMachine/log.txt
 0.log
 1.log
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
+log*
+*.log
+0.log
+1.log
+*.swp
